--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "discord-preview",
+  "name": "discord-presence-card",
   "description": "",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "main": "src/server.ts",
   "dependencies": {
     "apicache": "^1.6.3",
